--- a/src/styles/ui.scss
+++ b/src/styles/ui.scss
@@ -11,3 +11,12 @@
     overflow-x: hidden;
   }
 }
+.list-tabs__item {
+  .el-tabs__nav {
+    width: 100%;
+    .el-tabs__item {
+      flex: 1;
+      text-align: center;
+    }
+  }
+}
